--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^4.6.1",
     "bootstrap-social": "^5.1.1",
+    "firebase": "^9.6.2",
     "font-awesome": "^4.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-popper": "^2.2.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-webcam": "^6.0.0",
+    "reactfire": "^4.2.1",
     "reactstrap": "^9.0.1",
     "web-vitals": "^2.1.3"
   },
