--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^4.6.1",
+    "bootstrap": "^5.0.0",
     "bootstrap-social": "^5.1.1",
     "firebase": "^9.6.2",
     "font-awesome": "^4.7.0",
@@ -14,7 +14,7 @@
     "react-dom": "^17.0.2",
     "react-popper": "^2.2.5",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^3.0.1",
     "react-webcam": "^6.0.0",
     "reactfire": "^4.2.1",
     "reactstrap": "^9.0.1",
