--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "font-awesome": "^4.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-image-gallery": "^1.2.7",
     "react-popper": "^2.2.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^3.0.1",
